<resources>
    <string name="app_name">YARD</string>
    <string name="age">D.O.B</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="contact_number">WhatsApp Contact</string>
    <string name="id_number">ID Number</string>
    <string name="occupation">Occupation</string>
    <string name="village">Village</string>
    <string name="district">District</string>
    <string name="constituency">Constituency</string>
    <string name="province">Province</string>
    <string name="level_of_education">Education</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="ward">Ward</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="update">Update</string>
    <string name="reg">REGISTER</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login here</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
</resources>
