<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#51b46d"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingBottom="48dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/yard_logo_final_2" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@color/btn_login_register"
            android:onClick="login"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:background="@null"
            android:onClick="resetPassword"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="#e15258" />

        <!-- Link to Sign up Screen -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:background="@null"
            android:onClick="signUp"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textAllCaps="false"
            android:textColor="@color/btn_register"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>